# incredible_vulk

./: .clang-format  .clang-tidy  .editorconfig  .gitmodules  CMakeLists.txt  README.md  cmakelang.yml  requirements.txt
cmake/: FindSphinx.cmake  (+8 more)
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/class/: classivulk_1_1App.rst  classivulk_1_1Buffer.rst  classivulk_1_1CommandBuffers.rst  classivulk_1_1EventManager.rst  classivulk_1_1Framebuffer.rst  classivulk_1_1GraphicsPipeline.rst  classivulk_1_1I__Renderable.rst  classivulk_1_1Image.rst  classivulk_1_1ModelBase.rst  classivulk_1_1RenderableInstance.rst  classivulk_1_1Renderer.rst  classivulk_1_1Sampler.rst  classivulk_1_1Scene.rst  classivulk_1_1StaticMesh.rst  classivulk_1_1StaticModel.rst  classivulk_1_1UniformBufferObject.rst  classivulk_1_1VulkanResource.rst  classivulk_1_1utils_1_1Table.rst  classivulk_1_1utils_1_1TableRow.rst
docs/file/: CMakeLists_8txt.rst  app_8hpp.rst  app__state_8hpp.rst  base_8hpp.rst  buffer_8hpp.rst  command__buffer_8hpp.rst  commands_8hpp.rst  containers_8hpp.rst  event_8hpp.rst  format_8hpp.rst  framebuffer_8hpp.rst  fs_8hpp.rst  glm_8hpp.rst  graphics__pipeline_8hpp.rst  image_8hpp.rst  keywords_8hpp.rst  lighting_8hpp.rst  messages_8hpp.rst  priorities_8hpp.rst  queue__families_8hpp.rst  renderable_8hpp.rst  renderable__instance_8hpp.rst  renderer_8hpp.rst  sampler_8hpp.rst  scene_8hpp.rst  scene__ubo_8hpp.rst  shader__stage_8hpp.rst  standard__shader_8hpp.rst  static__model_8hpp.rst  swap__chain_8hpp.rst  table__print_8hpp.rst  texture_8hpp.rst  transform_8hpp.rst  uniform__buffer_8hpp.rst  version__data_8hpp.rst  vertex_8hpp.rst  vk_8hpp.rst  vma_8hpp.rst  vulkan__resource_8hpp.rst
docs/namespace/: namespaceivulk.rst  namespaceivulk_1_1E__BufferUsage.rst  namespaceivulk_1_1E__KeyCode.rst  namespaceivulk_1_1E__MemoryMode.rst  namespaceivulk_1_1E__MouseButton.rst  namespaceivulk_1_1E__RenderPriority.rst  namespaceivulk_1_1E__SamplerAddressMode.rst  namespaceivulk_1_1E__SamplerFilter.rst  namespaceivulk_1_1E__ShaderStage.rst  namespaceivulk_1_1detail.rst  namespaceivulk_1_1utils.rst
docs/struct/: structivulk_1_1AppState.rst  structivulk_1_1App_1_1InitArgs.rst  structivulk_1_1BufferInfo.rst  structivulk_1_1CommandBuffersCreateInfo.rst  structivulk_1_1DirLight.rst  structivulk_1_1Event.rst  structivulk_1_1FramebufferInfo.rst  structivulk_1_1GraphicsPipelineInfo.rst  structivulk_1_1ImageInfo.rst  structivulk_1_1KeyEvent.rst  structivulk_1_1MatricesPushConstants.rst  structivulk_1_1MatricesUBO.rst  structivulk_1_1MouseButtonEvent.rst  structivulk_1_1MouseMoveEvent.rst  structivulk_1_1NullResourceInfo.rst  structivulk_1_1PipelineTextureBinding.rst  structivulk_1_1PipelineUniformBufferBinding.rst  structivulk_1_1PipelineVertexInfo.rst  structivulk_1_1PointLight.rst  structivulk_1_1PointLightAttenuation.rst  structivulk_1_1QueueFamilyIndices.rst  structivulk_1_1SamplerInfo.rst  structivulk_1_1SceneUBOData.rst  structivulk_1_1Scene_1_1CompareRenderablePtr.rst  structivulk_1_1SwapChainInfo.rst  structivulk_1_1Transform.rst  structivulk_1_1UniformBufferObjectInfo.rst  structivulk_1_1VertexAttribTypeFormat.rst  structivulk_1_1VertexBase.rst  structivulk_1_1utils_1_1VersionData.rst
examples/: CMakeLists.txt
examples/cube_spin/: CMakeLists.txt
examples/cube_spin/assets/shaders/: cube.common.glsl  cube.frag  cube.frag.jinja  cube.vert  cube.vert.jinja  simple_3d.frag  simple_3d.vert
examples/cube_spin/src/: main.cpp
examples/just_vulkan/: CMakeLists.txt
examples/just_vulkan/src/: main.cpp
examples/model_lit/: CMakeLists.txt
examples/model_lit/assets/models/: crate.dae  crate.fbx  unitcube.dae  unitsphere.fbx  unitsphere_splitmat.dae  unitsphere_splitmat.fbx
examples/model_lit/assets/shaders/: crate.frag  crate.vert  sphere.common.glsl  sphere.frag  sphere.frag.jinja  sphere.vert  sphere.vert.jinja  sphere_bottom.frag  sphere_bottom.frag.jinja  sphere_top.frag  sphere_top.frag.jinja
examples/model_lit/src/: main.cpp
examples/model_spin/: CMakeLists.txt
examples/model_spin/assets/models/: crate.fbx
examples/model_spin/assets/shaders/: crate.common.glsl  crate.frag  crate.vert
examples/model_spin/src/: main.cpp
examples/rectangle/: CMakeLists.txt
examples/rectangle/assets/shaders/: simple.frag  simple.vert
examples/rectangle/src/: main.cpp
examples/rectangle_spin/: CMakeLists.txt
examples/rectangle_spin/assets/shaders/: simple_3d.vert
examples/rectangle_spin/src/: main.cpp
examples/simple_texture/: CMakeLists.txt
examples/simple_texture/assets/shaders/: texture.frag  texture.vert
examples/simple_texture/src/: main.cpp
examples/squares_3d/: CMakeLists.txt
examples/squares_3d/assets/shaders/: texture_3d.frag  texture_3d.frag.jinja  texture_3d.vert  texture_3d.vert.jinja
examples/squares_3d/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/src/: main.cpp
include/: CMakeLists.txt
include/ivulk/: config.hpp.in  glm.hpp  vk.hpp
include/ivulk/core/: app.hpp  app_state.hpp  buffer.hpp  command_buffer.hpp  event.hpp  framebuffer.hpp  graphics_pipeline.hpp  image.hpp  queue_families.hpp  sampler.hpp  shader_stage.hpp  swap_chain.hpp  texture.hpp  uniform_buffer.hpp  vertex.hpp  vma.hpp  vulkan_resource.hpp
include/ivulk/core/model/: base.hpp  static_model.hpp
include/ivulk/render/: lighting.hpp  priorities.hpp  renderable.hpp  renderable_instance.hpp  renderer.hpp  scene.hpp  scene_ubo.hpp  standard_shader.hpp  transform.hpp
include/ivulk/render/model/: base.hpp  static_model.hpp
include/ivulk/render/renderer/: simple_lit.hpp
include/ivulk/utils/: commands.hpp  containers.hpp  format.hpp  fs.hpp  keywords.hpp  messages.hpp  table_print.hpp  version_data.hpp
src/: CMakeLists.txt
src/ivulk/core/: app.cpp  app__drawing.cpp  app__graphics_pipeline.cpp  app__swap_chain.cpp  app__sync.cpp  buffer.cpp  command_buffer.cpp  event.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  sampler.cpp
src/ivulk/render/: renderable_instance.cpp  renderer.cpp  scene.cpp
src/ivulk/utils/: format.cpp  fs.cpp  messages.cpp
(+37 files in other folders)
