######################################################################
#                            Add Examples                            #
######################################################################

add_subdirectory(cube_spin)
add_subdirectory(rectangle)
add_subdirectory(simple_texture)
